yiltc-v0.2-backup/testsuite/negative/generic_non_generic.yilt
// Negative test: calling a non-generic function with type arguments
// Expected: error

fn add(a, b)
    return a + b

fn main()
    print(add[int](1, 2))
